refactor: Update application name to CONVERSOR (C)
Renames the application to "CONVERSOR (C)" in package.json and metadata.json for consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "conversor-de-texto-em-voz-realista-(novo)",
+  "name": "conversor-(c)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
